<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/customerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp" />

    <EditText
        android:id="@+id/customerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:layout_below="@+id/customerEmail"/>

    <Button
        android:id="@+id/btnCLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login"
        android:layout_below="@+id/customerPassword"
        android:layout_alignLeft="@+id/btnCReg"
        android:layout_alignStart="@+id/btnCReg"
        android:layout_marginTop="44dp"
        android:layout_alignRight="@+id/btnCReg"
        android:layout_alignEnd="@+id/btnCReg" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCReg"
        android:padding="20dp"
        android:text="@string/register"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/btnCLogin"
        android:layout_centerHorizontal="true" />

</RelativeLayout>