<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marianflanagan.paws.pet_sitter.EditPetSitterDetails">



    <EditText
        android:id="@+id/ps_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp" />



    <EditText
        android:id="@+id/ps_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/telephone_number"
        android:layout_below="@+id/ps_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/ps_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:layout_below="@+id/ps_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/address"/>

    <Button
        android:id="@+id/buttonPSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
