<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marianflanagan.paws.customer.CustomerProfile">


    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/btn_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_details"
        android:layout_marginTop="78dp"
        android:layout_below="@+id/textViewPets"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_bookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_services"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btn_details"
        android:layout_alignLeft="@+id/btn_details"
        android:layout_alignStart="@+id/btn_details"
        android:layout_alignRight="@+id/btn_details"
        android:layout_alignEnd="@+id/btn_details" />

    <Button
        android:id="@+id/btnClogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/btn_bookings"
        android:layout_alignLeft="@+id/btn_bookings"
        android:layout_alignStart="@+id/btn_bookings"
        android:layout_alignRight="@+id/btn_bookings"
        android:layout_alignEnd="@+id/btn_bookings" />

    <TextView
        android:id="@+id/textViewPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_pets"
        android:textSize="18sp"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/profile_pic"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvclick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewPets"
        android:layout_centerHorizontal="true"
        android:hint="@string/click_to_add_pet_details" />


</RelativeLayout>
