<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marianflanagan.paws.customer.PetDetails">

    <EditText
        android:id="@+id/etPetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_of_your_dog"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etBreed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/what_breed_is_your_dog"
        android:layout_below="@+id/etPetName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/what_age_is_your_dog"
        android:layout_below="@+id/etPetName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:text="@string/save_details"
        android:id="@+id/pet_details"/>
</RelativeLayout>
