<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marianflanagan.paws.pet_sitter.PetSitterProfile">


    <ImageView
        android:id="@+id/ps_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:layout_marginTop="46dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/ps_pic"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_pet_sitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_details"
        android:layout_marginRight="91dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/btn_bookings"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/bookings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_bookings"
        android:layout_marginBottom="62dp"
        android:layout_alignBottom="@+id/btnPSLogout"
        android:layout_alignLeft="@+id/btn_pet_sitter"
        android:layout_alignStart="@+id/btn_pet_sitter"
        android:layout_alignRight="@+id/btn_pet_sitter"
        android:layout_alignEnd="@+id/btn_pet_sitter" />

    <Button
        android:id="@+id/btnPSLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_marginBottom="54dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/bookings"
        android:layout_alignStart="@+id/bookings"
        android:layout_alignRight="@+id/bookings"
        android:layout_alignEnd="@+id/bookings" />



</RelativeLayout>
