<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/ps_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:paddingTop="20dp"/>

    <EditText
        android:id="@+id/ps_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:paddingTop="20dp"
        android:layout_below="@+id/ps_email"
        android:layout_alignLeft="@+id/ps_email"
        android:layout_alignStart="@+id/ps_email" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/login"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/button_reg"
        android:layout_alignStart="@+id/button_reg"
        android:layout_alignRight="@+id/button_reg"
        android:layout_alignEnd="@+id/button_reg" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_reg"
        android:padding="20dp"
        android:text="Register"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/button_login"/>


</RelativeLayout>
