<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.marianflanagan.paws.home.ActivityLogin">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/puppy_background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/paws_logo_mobile"
        android:layout_above="@+id/btn_customer_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_customer_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customer_login"
        tools:layout_editor_absoluteX="82dp"
        tools:layout_editor_absoluteY="216dp"
        android:onClick="btnCustomer_Click"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/btn_pet_sitter_login"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_pet_sitter_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pet_sitter_login"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="288dp"
        android:onClick="btnPetSitter_Click"
        android:layout_marginBottom="202dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btn_customer_login"
        android:layout_alignStart="@+id/btn_customer_login" />

</RelativeLayout>
